check_PROGRAMS = enum status control calibrate aim fire
TESTS = enum status control calibrate aim fire

enum_SOURCES = enum.c
status_SOURCES = status.c
control_SOURCES = control.c
calibrate_SOURCES = calibrate.c
aim_SOURCES = aim.c
fire_SOURCES = fire.c

LDADD = $(top_builddir)/src/lib/liblauncher.a
